--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,10 @@
     <title>Pathfinder</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.jpg" />
     <link rel="stylesheet" href="dist/app.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   </head>
 
   <body>
