Change colour scheme

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pathfinder</title>
+    <title>Path Search Visualiser</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.jpg" />
     <link rel="stylesheet" href="dist/app.css" />
     <link
