EventListInspector performance improvements

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <title>Path Search Visualiser</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.jpg" />
     <link rel="stylesheet" href="dist/app.css" />
+    <meta name="theme-color" content="#546e7a" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
