Minor performance improvements

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Path Search Visualiser</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon.jpg" />
-    <link rel="stylesheet" href="dist/app.css" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Debugger and Visualiser for Pathfinding Algorithms"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="theme-color" content="#546e7a" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <title>Path Search Visualiser</title>
   </head>
-
   <body>
-    <div id="pathfinder"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
