--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,7 +12,7 @@
       content="Debugger and Visualiser for Pathfinding Algorithms"
     />
     <link rel="apple-touch-icon" href="/public/logo192.png" />
-    <link rel="manifest" href="/public/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#edf0ef" />
     <link
       rel="stylesheet"
