--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#edf0ef" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <title>Waypoint</title>
+  <title></title>
 </head>
 
 <body>
