--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#edf0ef" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700&display=swap" />
   <title></title>
 </head>
 
