Minor UI changes

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Debugger and Visualiser for Pathfinding Algorithms" />
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#1c2128" />
+  <meta name="theme-color" content="#0a0c10" />
   <title></title>
 </head>
 
