--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8" />
   <link rel="icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
-  <meta name="description" content="Debugger and Visualiser for Pathfinding Algorithms" />
+  <meta name="description" content="Understand sequential decision-making through visualisation" />
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="#0a0c10" />
+  <meta name="theme-color" content="#111317" />
   <title></title>
 </head>
 
