--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
   <meta name="description" content="Understand sequential decision-making through visualisation." />
-  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="apple-touch-icon" href="/icon@3x.png" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0a0c10" />
   <title>Posthoc</title>
